--- a/SalesPlat-Auto/Content/bootstrap.css
+++ b/SalesPlat-Auto/Content/bootstrap.css
@@ -3797,7 +3797,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-left: 0;
 }
 .nav-justified {
-  width: 100%;
+  width: 94%;
+    height: 38px;
 }
 .nav-justified > li {
   float: none;
