--- a/SalesPlat-Auto/Content/bootstrap.css
+++ b/SalesPlat-Auto/Content/bootstrap.css
@@ -186,6 +186,7 @@ table {
 td,
 th {
   padding: 0;
+    text-align: left;
 }
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
@@ -4647,6 +4648,7 @@ a.list-group-item.active > .badge,
   margin-bottom: 15px;
   font-size: 21px;
   font-weight: 200;
+    text-align: left;
 }
 .jumbotron > hr {
   border-top-color: #000000;
