--- a/SalesPlat-Auto/Content/bootstrap.css
+++ b/SalesPlat-Auto/Content/bootstrap.css
@@ -4649,7 +4649,7 @@ a.list-group-item.active > .badge,
   margin-bottom: 15px;
   font-size: 21px;
   font-weight: 200;
-    text-align: right;
+    text-align: left;
 }
 .jumbotron > hr {
   border-top-color: #000000;
